前台页面获取数据

--- a/MyProject/views/back/header.ejs
+++ b/MyProject/views/back/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>DouPHP 管理中心</title>
+    <title>仙女棒后台 管理中心</title>
     <meta name="Copyright" content="Douco Design." />
     <link href="/css/public.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="/js/jquery.min.js"></script>
@@ -16,16 +16,16 @@
 <body>
 <div id="dcWrap"> <div id="dcHead">
         <div id="head">
-            <div class="logo"><a href="index.html"><img src="images/dclogo.gif" alt="logo"></a></div>
+            <div class="logo" style="color: #fff;font-size: 16px ;padding-top:5px">仙女棒企业后台管理</div>
             <div class="nav">
                 <ul>
                     <li class="M"><a href="JavaScript:void(0);" class="topAdd">新建</a>
                         <div class="drop mTopad"><a href="/admin/productsAdd">商品</a> <a href="/admin/articlesAdd">文章</a> <a href="/admin/navs">自定义导航</a> <a href="show.html">首页幻灯</a> <a href="page.php?rec=add">单页面</a> <a href="/admin/managerAdd">管理员</a> <a href="link.html"></a> </div>
                     </li>
-                    <li><a href="../index.php" target="_blank">查看站点</a></li>
-                    <li><a href="index.php?rec=clear_cache">清除缓存</a></li>
+                    <li><a href="#" target="_blank">查看站点</a></li>
+                    <li><a href="#">清除缓存</a></li>
                     <li><a href="http://www.mycodes.net" target="_blank">帮助</a></li>
-                    <li class="noRight"><a href="module.html">DouPHP+</a></li>
+                    <li class="noRight"><a href="module.html">仙女棒后台+</a></li>
                 </ul>
                 <ul class="navRight">
                     <li class="M noLeft"><a href="JavaScript:void(0);">您好，hyj</a>
