--- a/MyProject/views/back/index.ejs
+++ b/MyProject/views/back/index.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
   <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心</div>  <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心</div>  <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
    <div id="douApi"></div>
       <div class="indexBox">
     <div class="boxTitle">单页面快速管理</div>
@@ -58,7 +58,7 @@
           <td>DouPHP版本：</td>
           <td><strong>v1.3 Release 20160125</strong></td>
           <td>安装日期：</td>
-          <td><strong>2016-02-25</strong></td>
+          <td><strong>2017-07-25</strong></td>
          </tr>
         </table>
        </ul>
@@ -73,23 +73,20 @@
           <th width="45%">IP地址</th>
           <th width="55%">操作时间</th>
          </tr>
-                  <tr>
+         <tr>
           <td align="center">127.0.0.1</td>
-          <td align="center">2016-02-25 23:29:08</td>
+          <td align="center">2017-07-25 23:29:08</td>
          </tr>
                   <tr>
           <td align="center">127.0.0.1</td>
-          <td align="center">2016-02-25 13:48:48</td>
+          <td align="center">2016-07-26 13:48:48</td>
          </tr>
-                  <tr>
-          <td align="center">127.0.0.1</td>
-          <td align="center">2013-10-16 09:43:01</td>
+          <tr>
+           <td align="center">127.0.0.1</td>
+           <td align="center">2017-8-16 09:43:01</td>
          </tr>
-                  <tr>
-          <td align="center">127.0.0.1</td>
-          <td align="center">2013-10-16 09:42:58</td>
-         </tr>
-                 </table>
+
+             </table>
        </ul>
       </div>
      </td>
@@ -100,10 +97,6 @@
     <ul>
      <table width="100%" border="0" cellspacing="0" cellpadding="7" class="tableBasic">
       <tr>
-       <td width="120" valign="top">PHP 版本：</td>
-       <td valign="top">5.3.29 </td>
-       <td width="100" valign="top">MySQL 版本：</td>
-       <td valign="top">5.5.40</td>
        <td width="100" valign="top">服务器操作系统：</td>
        <td valign="top">WINNT(127.0.0.1)</td>
       </tr>
