--- a/MyProject/views/back/login.ejs
+++ b/MyProject/views/back/login.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>DouPHP 管理中心</title>
+    <title>仙女棒后台 管理中心</title>
     <meta name="Copyright" content="Douco Design." />
     <link href="/css/public.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="/js/jquery.min.js"></script>
