--- a/MyProject/views/back/article_categoryEdit.ejs
+++ b/MyProject/views/back/article_categoryEdit.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>添加分类</strong> </div>
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>添加分类</strong> </div>
   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/categoryA" class="actionBtn">文章分类</a>添加分类</h3>
     <form action="" method="post">
