--- a/MyProject/views/back/articles.ejs
+++ b/MyProject/views/back/articles.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>文章列表</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>文章列表</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
         <h3><a href="/admin/articlesAdd" class="actionBtn add">添加文章</a>文章列表</h3>
     <div class="filter">
     <form  method="post" id="sel-form">
