--- a/MyProject/views/back/articlesAdd.ejs
+++ b/MyProject/views/back/articlesAdd.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>添加文章</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>添加文章</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/articles" class="actionBtn">文章列表</a>添加文章</h3>
     <form action="article.php?rec=insert" method="post" enctype="multipart/form-data">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
@@ -64,8 +64,8 @@
       <tr>
        <td align="right">缩略图</td>
        <td>
-        <input type="file" name="image" size="38" class="inpFlie" />
-        <img src="images/icon_no.png"></td>
+        <input type="file" name="image" size="38" class="inpFlie"  id="img"/>
+        <img src="../../public/images/icon_no.png"></td>
       </tr>
       <tr>
        <td align="right">关键字</td>
@@ -116,7 +116,9 @@
      frm.elements['new_cat_id'].style.display = frm.elements['action'].value == 'category_move' ? '' : 'none';
  }
 // $(function () {
+
      $('#submit').click(function () {
+
          $.ajax({
              url: '/admin/articlesAdd',
              type: 'POST',
