--- a/MyProject/views/back/managerEdit.ejs
+++ b/MyProject/views/back/managerEdit.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
 <div id="dcMain">
  <!-- 当前位置 -->
- <div id="urHere">DouPHP 管理中心<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+ <div id="urHere">仙女棒后台 管理中心<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
   <h3><a href="/admin/manager" class="actionBtn">返回列表</a>网站管理员</h3>
   <form action="" method="post">
    <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
