--- a/MyProject/views/back/navs.ejs
+++ b/MyProject/views/back/navs.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>自定义导航栏</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>自定义导航栏</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
     <h3><a href="/admin/navsAdd" class="actionBtn">添加导航</a>自定义导航栏</h3>
         <div class="navList">
      <ul class="tab">
