--- a/MyProject/views/back/page.ejs
+++ b/MyProject/views/back/page.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>单页面列表</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>单页面列表</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
     <h3><a href="/admin/pageAdd" class="actionBtn">添加单页面</a>单页面列表</h3>
         <div class="page">
            <dl>
