--- a/MyProject/views/back/pageAdd.ejs
+++ b/MyProject/views/back/pageAdd.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>添加单页面</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>添加单页面</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
     <h3><a href="page.html" class="actionBtn">单页面列表</a>添加单页面</h3>
             <form action="page.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
