--- a/MyProject/views/back/products.ejs
+++ b/MyProject/views/back/products.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>商品列表</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>商品列表</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
         <h3><a href="/admin/productsAdd" class="actionBtn add">添加商品</a>商品列表</h3>
     <div class="filter">
     <form method="post" id="sel-form">
