--- a/MyProject/views/back/productsAdd.ejs
+++ b/MyProject/views/back/productsAdd.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>></b><strong>添加商品</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">仙女棒后台 管理中心<b>></b><strong>添加商品</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/products" class="actionBtn">商品列表</a>添加商品</h3>
     <form action="product.php?rec=insert" method="post" enctype="multipart/form-data">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
