修改后台数据

--- a/MyProject/views/back/articles.ejs
+++ b/MyProject/views/back/articles.ejs
@@ -39,7 +39,8 @@
             <td align="center"><a ><%= articles[i].cat_id.cat_name %></a></td>
             <td align="center"><%= articles[i].create_date %></td>
             <td align="center">
-                <a href="/admin/Aedit/?_id=<%= articles[i]._id %>">编辑</a> | <a href="/admin/Adelete/?title=<%= articles[i].title %>">删除</a>
+                <!--<a href="/admin/Aedit/?_id=<%= articles[i]._id %>">编辑</a> | -->
+                <a href="/admin/Adelete/?title=<%= articles[i].title %>">删除</a>
             </td>
         </tr>
         <% } %>
