--- a/MyProject/views/back/products.ejs
+++ b/MyProject/views/back/products.ejs
@@ -41,7 +41,8 @@
             <td class="type" align="center"><a href=""><%= products[i].cat_id.cat_name %></a></td>
             <td align="center"><%= products[i].create_date %></td>
             <td align="center">
-                <a href="/admin/Pedit/?_id=<%= products[i]._id %>">编辑</a> | <a href="/admin/Pdelete/?name=<%= products[i].name %>">删除</a>
+                <!--<a href="/admin/Pedit/?_id=<%= products[i]._id %>">编辑</a> | -->
+                <a href="/admin/Pdelete/?name=<%= products[i].name %>">删除</a>
             </td>
         </tr>
         <% } %>
