--- a/CRM1/views/back/products.ejs
+++ b/CRM1/views/back/products.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
     
-<div id="urHere">客户关系管理中心<b>></b><strong>销售管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>销售管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
         <h3><a href="/admin/productsAdd" class="actionBtn add">添加客户</a>销售管理</h3>
     <div class="filter">
     <form method="post" id="sel-form">
@@ -63,7 +63,7 @@
          <% for(var j=0;j<categoryP.length;j++){ %>
          <option value='<%= categoryP[j]._id %>'><%= categoryP[j].cat_name %></option>
          <% } %>
-     <input id="submit" name="submit" class="btn" type="button" value="执行" />
+     <input id="submit" name="submit" class="btn" type="button" value="run" />
     </div>
     </form>
     </div>
@@ -81,7 +81,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-      版权所有 © 客户关系管理系统，并保留所有权利。
+     West Ham United Foundation Project
   </ul>
  </div>
 </div>  
