--- a/CRM1/views/back/articles.ejs
+++ b/CRM1/views/back/articles.ejs
@@ -2,18 +2,26 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">客户关系管理中心<b>></b><strong>客户管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-        <h3><a href="/admin/articlesAdd" class="actionBtn add">添加客户</a>客户管理</h3>
+<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>Project Management</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+        <h3><a href="/admin/articlesAdd" class="actionBtn add">Add New</a>Project Management</h3>
     <div class="filter">
     <form  method="post" id="sel-form">
-     <select name="cat_id" id="sel" >
-         <option value="0" >未分类</option>
-         <% for(var j=0;j<categoryA.length;j++){ %>
-         <option  value='<%= categoryA[j]._id %>'><%= categoryA[j].cat_name %></option>
-         <% } %>
+     <select name="cat_id" id="sel">
+        <option value="0" >Choose</option>
+        <% for(var j=0;j<articles.length;j++){ %>
+        <option  value='<%= articles[j].leader %>'><%= articles[j].leader %></option>
+        <% } %>
      </select>
-     <!--<input name="keyword" type="text" class="inpMain" value="" size="20" />-->
-     <input id="select" class="btnGray" type="submit" value="筛选分类" />
+     <input id="select" class="btnGray" type="submit" value="By person in charge" />
+
+     <select name="cat_id" id="selGroup">
+        <option value="0">Choose</option>
+        <% for(var j=0;j<articles.length;j++){ %>
+        <option  value='<%= articles[j].leader %>'><%= articles[j].address %></option>
+        <% } %>
+        </select>
+     <!-- <input name="filter" id="filter" type="text" class="inpMain" value="" size="20" /> -->
+     <input id="selectGroup" class="btnGray" type="submit" value="According to the group" />
     </form>
     </div>
         <div id="list">
@@ -21,14 +29,16 @@
     <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic" id="table">
      <tr>
       <th width="22" align="center"><input name='chkall' type='checkbox' id='chkall' onclick='selectcheckbox(this.form)' value='check'></th>
-      <th width="40" align="center">编号</th>
-      <th width="150" align="center">客户名</th>
-      <th width="150" align="center">客户分类</th>
-      <th align="center">地址</th>
-      <th align="center">电话</th>
-      <th align="center">主营产品</th>
-      <th width="80" align="center">添加日期</th>
-      <th width="80" align="center">操作</th>
+      <th width="40" align="center">ID</th>
+      <th width="80" align="center">Project name</th>
+      <th width="80" align="center">Project leader</th>
+      <th width="120" align="center">Target groups</th>
+      <th width="100" align="center">Email</th>
+      <th width="200" align="center">Project Brief</th>
+      <th  width="80"align="center">Cooperative Customer</th>
+      <th align="center">Customer Brief</th>
+      <th width="80" align="center">Add Date</th>
+      <th width="30" align="center">Operation</th>
      </tr>
         <tbody id="wrap">
         <% for(var i=0;i<articles.length;i++){ %>
@@ -39,14 +49,15 @@
             </td>
             <td><a href=""><%= i+1 %></a></td>
             <td align="center"><%= articles[i].title %></td>
-            <td align="center"><a ><%= articles[i].cat_id.cat_name %></a></td>
+            <td align="center"><%= articles[i].leader %></td>
             <td align="center"><%= articles[i].address %></td>
             <td align="center"><%= articles[i].tel %></td>
             <td align="center"><%= articles[i].description %></td>
+            <td align="center"><%= articles[i].cooperativeCustomer  %></td>
+            <td align="center"><%= articles[i].customerBrief %></td>
             <td align="center"><%= articles[i].create_date %></td>
             <td align="center">
-                <!--<a href="/admin/Aedit/?_id=<%= articles[i]._id %>">编辑</a> | -->
-                <a href="/admin/Adelete/?title=<%= articles[i].title %>">删除</a>
+                <a href="/admin/Adelete/?title=<%= articles[i].title %>">Delete</a>
             </td>
         </tr>
         <% } %>
@@ -54,23 +65,23 @@
      </table>
     <div class="action">
      <select name="action" onchange="douAction()">
-      <option value="0">请选择...</option>
-      <option value="del_all">删除</option>
-      <option value="category_move">移动分类至</option>
+      <option value="0">Other Operating</option>
+      <option value="del_all">Delete multiple</option>
+      <option value="category_move">Replacement person in charge</option>
      </select>
      <select id="MoveType" name="new_cat_id" style="display:none">
-         <% for(var j=0;j<categoryA.length;j++){ %>
-         <option  value='<%= categoryA[j]._id %>'><%= categoryA[j].cat_name %></option>
+         <% for(var j=0;j<articles.length;j++){ %>
+         <option  value='<%= articles[j]._id %>'><%= articles[j].leader %></option>
          <% } %>
      </select>
-     <input id="submit" name="submit" class="btn" type="button" value="执行" />
+     <input id="submit" name="submit" class="btn" type="button" value="run" />
     </div>
     </form>
     </div>
     <div class="clear"></div>
     <div class="pager">
         <% for(k=0;k<(Math.ceil(n/5));k++){ %>
-        <a href="/admin/articles?start=<%= (k*5) %>">第<%= k+1 %>页</a>
+        <a href="/admin/articles?start=<%= (k*5) %>"><%= k+1 %></a>
         <% } %>
     </div>           </div>
  </div>
@@ -79,7 +90,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-      版权所有 © 客户关系管理系统，并保留所有权利。
+     West Ham United Foundation Project
   </ul>
  </div>
 </div>  
@@ -98,28 +109,29 @@
      frm.elements['new_cat_id'].style.display = frm.elements['action'].value == 'category_move' ? '' : 'none';
  }
  $(function () {
+
      $('#sel-form').on('submit', function (e) {
          e.preventDefault();
          $.ajax({
              url: '/admin/Asearch',
              type: 'POST',
              data: {
-                 sel: $('#sel').val()
+                sel: $('#sel').val(),
+                selGroup: $('#selGroup').val()
              },
              success: function (res) {
-                 console.log(res.data)
                  var str = '';
                  $.each(res.data, function (index, item) {
-                     console.log(item)
-
                      str += "<tr><td align='center'><input type='checkbox' name='checkbox[]' value='' /><input id='_id' name='_id' type='hidden' value="+item._id +"/></td> " +
                              "<td><a> " + (index + 1) + "</a></td> " +
                              "<td align='center'> " + item.title + "</td> " +
-                             "<td class='type'align='center'><a href='article.php?cat_id=1'> " + item.cat_id.cat_name + "</a></td> " +
+                             "<td align='center'> " + item.leader + "</td> " +
                              "<td align='center'> " + item.address + "</td> " +
                              "<td align='center'> " + item.tel + "</td> " +
                              "<td align='center'> " + item.description + "</td> " +
-                             "<td align='center'>" + item.create_date + '</td>' +
+                             "<td align='center'> " + item.cooperativeCustomer + "</td> " +
+                             "<td align='center'>" + item.customerBrief + '</td>' +
+                             "<td align='center'> " + item.create_date + "</td> " +
                              "<td align='center'><a href='/admin/Aedit/?_id= '+res.data[index]._id >编辑</a> | <a href='/admin/Pdelete/?name= '+ res.data[index].name>删除</a> </td></tr>"
                  })
                  $("#wrap").html(str);
@@ -127,7 +139,6 @@
              }
          })
      })
-
 
      $("#submit").click(function () {
          if ($('.action select').val() == "del_all") {
