--- a/CRM1/views/back/articlesAdd.ejs
+++ b/CRM1/views/back/articlesAdd.ejs
@@ -3,17 +3,23 @@
 
  <div id="dcMain">
     
-<div id="urHere">客户关系管理中心<b>></b><strong>客户管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-            <h3><a href="/admin/articles" class="actionBtn">客户列表</a>添加客户</h3>
+<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>Project Management</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+            <h3><a href="/admin/articles" class="actionBtn">Project Lists</a>Add New</h3>
     <form action="article.php?rec=insert" method="post" enctype="multipart/form-data">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
       <tr>
-       <td width="90" align="right">客户名称</td>
+       <td width="90" align="right">Project name</td>
        <td>
-        <input type="text" name="title" value="" size="80" class="inpMain" />
+        <input size="50" type="text" name="title" value="" size="80" class="inpMain" />
        </td>
       </tr>
       <tr>
+        <td width="90" align="right">Project leader</td>
+        <td>
+         <input size="50" type="text" name="leader" value="" size="80" class="inpMain" />
+        </td>
+       </tr>
+      <!-- <tr>
        <td align="right">客户星级</td>
        <td>
         <select name="cat_id">
@@ -23,33 +29,46 @@
             <% } %>
          </select>
        </td>
-      </tr>
+      </tr> -->
       <tr>
-         <td align="right">客户地址</td>
+         <td align="right">Target groups</td>
          <td>
-             <textarea name="address" cols="60" rows="4" class="textArea"></textarea>
+            <input type="address" name="address" value="" size="50" class="inpMain" />
          </td>
       </tr>
       <tr>
-         <td align="right">联系电话</td>
+         <td align="right">Email</td>
          <td>
             <input type="tel" name="tel" value="" size="50" class="inpMain" />
          </td>
       </tr>
       <tr>
-          <td align="right">主营产品</td>
+          <td align="right">Project Brief</td>
           <td>
             <textarea name="description"  cols="60" rows="4" class="textArea"></textarea>
           </td>
           </td>
       </tr>
       <tr>
+        <td align="right">Cooperative Customer</td>
+        <td>
+            <input type="cooperativeCustomer" name="cooperativeCustomer" value="" size="50" class="inpMain" />
+        </td>
+        </tr>
+        <tr>
+            <td align="right">Customer Brief</td>
+            <td>
+            <textarea name="customerBrief"  cols="60" rows="4" class="textArea"></textarea>
+            </td>
+            </td>
+        </tr>
+      <tr>
        <td></td>
        <td>
         <input type="hidden" name="token" value="7e4a88fb" />
         <input type="hidden" name="image" value="">
         <input type="hidden" name="id" value="">
-        <input id="submit" name="submit" class="btn" type="button" value="提交" />
+        <input id="submit" name="submit" class="btn" type="button" value="Submit" />
        </td>
       </tr>
      </table>
@@ -61,7 +80,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-      版权所有 © 客户关系管理系统，并保留所有权利。
+     West Ham United Foundation Project
   </ul>
  </div>
 </div>  
@@ -82,12 +101,12 @@
 // $(function () {
 
      $('#submit').click(function () {
-
          $.ajax({
              url: '/admin/articlesAdd',
              type: 'POST',
              data: $('form').serialize(),
              success: function (res) {
+                 console.log('res', res)
                  if(res.status == 0){
                      location.href='/admin/articles';
                  }else{
