--- a/CRM1/views/back/index.ejs
+++ b/CRM1/views/back/index.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-   <div id="urHere">客户关系管理中心</div>
+   <div id="urHere">West Ham United Foundation Project Management System</div>
    <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
 
      <table width="100%" border="0" cellspacing="0" cellpadding="0" class="indexBoxTwo">
@@ -35,7 +35,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-   版权所有 © 客户关系管理系统，并保留所有权利。
+  West Ham United Foundation Project
   </ul>
  </div>
 </div>  
