--- a/CRM1/views/back/manager.ejs
+++ b/CRM1/views/back/manager.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">客户关系管理中心<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
     <h3><a href="/admin/managerAdd" class="actionBtn">添加管理员</a>网站管理员</h3>
         <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
      <tr>
@@ -27,7 +27,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-      版权所有 © 客户关系管理系统，并保留所有权利。
+     West Ham United Foundation Project
   </ul>
  </div>
 </div>  
