--- a/CRM1/views/back/managerEdit.ejs
+++ b/CRM1/views/back/managerEdit.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
 <div id="dcMain">
   
- <div id="urHere">客户关系管理中心<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+ <div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
   <h3><a href="/admin/manager" class="actionBtn">返回列表</a>网站管理员</h3>
   <form action="" method="post">
    <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
@@ -41,7 +41,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-   版权所有 © 客户关系管理系统，并保留所有权利。
+  West Ham United Foundation Project
   </ul>
  </div>
 </div>  
