--- a/CRM1/views/back/product_categoryAdd.ejs
+++ b/CRM1/views/back/product_categoryAdd.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
 <div id="dcMain">
     
-<div id="urHere">客户关系管理中心<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/categoryP" class="actionBtn">销售信息</a>添加</h3>
     <form action="product_category.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
@@ -47,7 +47,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-   版权所有 © 客户关系管理系统，并保留所有权利。
+  West Ham United Foundation Project
   </ul>
  </div>
 </div>  
