--- a/CRM1/views/index.ejs
+++ b/CRM1/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <title>仙女棒后台 管理中心</title>
+ <title>West Ham United Foundation Project Management System</title>
  <meta name="Copyright" content="Douco Design." />
  <link href="/css/public.css" rel="stylesheet" type="text/css">
  <script type="text/javascript" src="/js/jquery.min.js"></script>
@@ -62,7 +62,7 @@
 
 <div id="dcMain">
  &lt;!&ndash; 当前位置 &ndash;&gt;
- <div id="urHere">客户关系管理中心</div>  <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
+ <div id="urHere">West Ham United Foundation Project Management System</div>  <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
   <div id="douApi"></div>
   <div class="indexBox">
    <div class="boxTitle">单页面快速管理</div>
