--- a/CRM1/views/back/articlesAdd.ejs
+++ b/CRM1/views/back/articlesAdd.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>Project Management</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>Project Management</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/articles" class="actionBtn">Project Lists</a>Add New</h3>
     <form action="article.php?rec=insert" method="post" enctype="multipart/form-data">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
