--- a/CRM1/views/back/header.ejs
+++ b/CRM1/views/back/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>West Ham United Foundation Project Management System</title>
+    <title>Management System</title>
     <meta name="Copyright" content="Douco Design." />
     <link href="/css/animate.css" rel="stylesheet" type="text/css">
     <link href="/css/public.css" rel="stylesheet" type="text/css">
@@ -19,15 +19,15 @@
 <body>
 <div id="dcWrap"> <div id="dcHead">
         <div id="head">
-            <div class="logo" style="color: #fff;font-size: 16px ;padding-top:5px">客户关系后台管理</div>
+            <div class="logo" style="color: #fff;font-size: 16px ;padding-top:5px">Menu</div>
             <div class="nav">
-                <ul>
-                    <li><a href="#index" target="_blank">查看站点</a></li>
-                </ul>
                 <ul class="navRight">
-                    <li class="noLeft"><a href="JavaScript:void(0);" id="names">您好</a>
+                    <ul>
+                        <li>West Ham United Foundation Project Management System</li>
+                    </ul>
+                    <li class="noLeft"><a href="JavaScript:void(0);" id="names">Hello</a>
                     </li>
-                    <li class="noRight"><a href="/admin/login">退出</a></li>
+                    <li class="noRight"><a href="/admin/login">Sign out</a></li>
                 </ul>
             </div>
         </div>
