--- a/CRM1/views/back/left_nav.ejs
+++ b/CRM1/views/back/left_nav.ejs
@@ -1,14 +1,14 @@
 <div id="dcLeft">
     <div id="menu">
         <ul class="top">
-            <li  class="animated bounceInUp light"><a href="/admin"><i class="home"></i><em>管理首页</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin"><i class="home"></i><em>Home</em></a></li>
         </ul>
         <ul>
-            <li  class="animated bounceInUp light"><a href="/admin/navs"><i class="nav"></i><em>自定义公告栏</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/navs"><i class="nav"></i><em>Bulletin Board</em></a></li>
         </ul>
         <ul>
-            <li  class="animated bounceInUp light"><a href="/admin/articles"><i class="article"></i><em>客户管理</em></a></li>
-            <li  class="animated bounceInUp light"><a href="/admin/categoryA"><i class="articleCat"></i><em>客户分类</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/articles"><i class="article"></i><em>Project Management</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/categoryA"><i class="articleCat"></i><em>Project Progress</em></a></li>
         </ul>
         <ul>
             <li  class="animated bounceInUp light"><a href="/admin/categoryP"><i class="productCat"></i><em>销售信息</em></a></li>
@@ -16,7 +16,7 @@
         </ul>
         
         <ul class="bot">
-            <li  class="animated bounceInUp light "><a href="/admin/manager"><i class="manager"></i><em class="message">网站管理员</em></a></li>
+            <li  class="animated bounceInUp light "><a href="/admin/manager"><i class="manager"></i><em class="message">User Management</em></a></li>
         </ul>
     </div>
 </div>
