--- a/CRM1/views/back/login.ejs
+++ b/CRM1/views/back/login.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>West Ham United Foundation Project Management System</title>
+    <title>Management System</title>
     <meta name="Copyright" content="Douco Design." />
     <!--<link href="/css/public.css" rel="stylesheet" type="text/css">-->
     <link href="/css/login.css" rel="stylesheet" type="text/css">
