--- a/CRM1/views/back/manager.ejs
+++ b/CRM1/views/back/manager.ejs
@@ -2,12 +2,12 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-    <h3><a href="/admin/managerAdd" class="actionBtn">添加管理员</a>网站管理员</h3>
+<div id="urHere">Management System<b>></b><strong>User Management</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+    <h3><a href="/admin/managerAdd" class="actionBtn">Add New</a>User Management</h3>
         <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
      <tr>
-      <th width="30" align="center">编号</th>
-      <th align="left">管理员名称</th>
+      <th width="30" align="center">ID</th>
+      <th align="left">Name</th>
       <th align="center">添加时间</th>
       <th align="center">操作</th>
      </tr>
