--- a/CRM1/views/back/managerAdd.ejs
+++ b/CRM1/views/back/managerAdd.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>网站管理员</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
     <h3><a href="/admin/manager" class="actionBtn">返回列表</a>网站管理员</h3>
     <form action="manager.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
@@ -28,7 +28,7 @@
        <td></td>
        <td>
         <input type="hidden" name="token" value="5a58b748" />
-        <input id="submit" type="button" name="submit" class="btn" value="提交" />
+        <input id="submit" type="button" name="submit" class="btn" value="Submit" />
        </td>
       </tr>
      </table>
