--- a/CRM1/views/back/navs.ejs
+++ b/CRM1/views/back/navs.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>公告栏</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>公告栏</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
     <h3><a href="/admin/navsAdd" class="actionBtn">添加公告</a>公告栏</h3>
         <div class="navList">
      <ul class="tab">
