--- a/CRM1/views/back/product_category.ejs
+++ b/CRM1/views/back/product_category.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
         <h3><a href="/admin/categoryPAdd" class="actionBtn add">添加</a>销售信息</h3>
         <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
             <tr>
