--- a/CRM1/views/back/products.ejs
+++ b/CRM1/views/back/products.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>销售管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>销售管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
         <h3><a href="/admin/productsAdd" class="actionBtn add">添加客户</a>销售管理</h3>
     <div class="filter">
     <form method="post" id="sel-form">
