--- a/CRM1/views/back/productsAdd.ejs
+++ b/CRM1/views/back/productsAdd.ejs
@@ -3,7 +3,7 @@
 
  <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>销售管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>销售管理</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/products" class="actionBtn">销售管理</a>添加客户</h3>
     <form action="product.php?rec=insert" method="post" enctype="multipart/form-data">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
@@ -59,7 +59,7 @@
        <td>
         <input type="hidden" name="token" value="21307217" />
         <input type="hidden" name="id" value="">
-        <input id="submit" name="submit" class="btn" type="button" value="提交" />
+        <input id="submit" name="submit" class="btn" type="button" value="Submit" />
        </td>
       </tr>
      </table>
