--- a/CRM1/views/index.ejs
+++ b/CRM1/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <title>West Ham United Foundation Project Management System</title>
+ <title>Management System</title>
  <meta name="Copyright" content="Douco Design." />
  <link href="/css/public.css" rel="stylesheet" type="text/css">
  <script type="text/javascript" src="/js/jquery.min.js"></script>
@@ -27,7 +27,7 @@
      <li><a href="http://www.mycodes.net" target="_blank">帮助</a></li>
     </ul>
     <ul class="navRight">
-     <li class="M noLeft"><a href="JavaScript:void(0);">您好，hyj</a>
+     <li class="M noLeft"><a href="JavaScript:void(0);">Hello，hyj</a>
       <div class="drop mUser">
        <a href="manager.php?rec=edit&id=1">编辑我的个人资料</a>
        <a href="manager.php?rec=cloud_account">设置云账户</a>
@@ -62,7 +62,7 @@
 
 <div id="dcMain">
  &lt;!&ndash; 当前位置 &ndash;&gt;
- <div id="urHere">West Ham United Foundation Project Management System</div>  <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
+ <div id="urHere">Management System</div>  <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
   <div id="douApi"></div>
   <div class="indexBox">
    <div class="boxTitle">单页面快速管理</div>
