--- a/CRM1/views/back/index.ejs
+++ b/CRM1/views/back/index.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-   <div id="urHere">West Ham United Foundation Project Management System</div>
+   <div id="urHere">Management System</div>
    <div id="index" class="mainBox" style="padding-top:18px;height:auto!important;height:550px;min-height:550px;">
 
      <table width="100%" border="0" cellspacing="0" cellpadding="0" class="indexBoxTwo">
