--- a/CRM1/views/back/navsAdd.ejs
+++ b/CRM1/views/back/navsAdd.ejs
@@ -32,7 +32,7 @@
             <td></td>
             <td>
              <input type="hidden" name="token" value="30fa081a" />
-                <input  id="submit" name="submit" class="btn" type="button" value="提交" />
+                <input  id="submit" name="submit" class="btn" type="button" value="Submit" />
             </td>
            </tr>
          </table>
