--- a/CRM1/views/back/product_categoryAdd.ejs
+++ b/CRM1/views/back/product_categoryAdd.ejs
@@ -2,7 +2,7 @@
 <%- include left_nav.ejs %>
 <div id="dcMain">
     
-<div id="urHere">West Ham United Foundation Project Management System<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+<div id="urHere">Management System<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
             <h3><a href="/admin/categoryP" class="actionBtn">销售信息</a>添加</h3>
     <form action="product_category.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
@@ -35,7 +35,7 @@
        <td>
         <input type="hidden" name="token" value="b9439ae8" />
         <input type="hidden" name="cat_id" value="" />
-        <input id="submit" name="submit" class="btn" type="button" value="提交" />
+        <input id="submit" name="submit" class="btn" type="button" value="Submit" />
        </td>
       </tr>
      </table>
